[package]
name = "rs-stealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obfstr = "0.3.0"
houdini = "1.0.2"
walkdir = "2.3.2"
whoami = "1.2.1"
reqwest = { version = "0.11.10", features = ["blocking"] }
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"

[rust]
debuginfo-level = 1

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true